// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders checked correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    defaultChecked={true}
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="#6A88F2"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#6A88F2"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#D4DBDE"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="white"
    />
    <circle
      cx={8}
      cy={8}
      fill="#C1CCD0"
      r={4}
    />
  </svg>
</div>
`;

exports[`Radio renders correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="#6A88F2"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#6A88F2"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#D4DBDE"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="white"
    />
    <circle
      cx={8}
      cy={8}
      fill="#C1CCD0"
      r={4}
    />
  </svg>
</div>
`;

exports[`Radio renders disabled correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    disabled={true}
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="#6A88F2"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#6A88F2"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#D4DBDE"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="white"
    />
    <circle
      cx={8}
      cy={8}
      fill="#C1CCD0"
      r={4}
    />
  </svg>
</div>
`;

exports[`Radio renders isMedium correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
  width: 20px;
  height: 20px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    defaultChecked={true}
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={20}
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="#6A88F2"
      r={10}
    />
    <circle
      cx={10}
      cy={10}
      r={9.5}
      stroke="#6A88F2"
    />
    <circle
      cx={10}
      cy={10}
      fill="white"
      r={5}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={20}
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="white"
      r={10}
    />
    <circle
      cx={10}
      cy={10}
      r={9.5}
      stroke="#D4DBDE"
    />
    <circle
      cx={10}
      cy={10}
      fill="white"
      r={5}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={20}
    viewBox="0 0 20 20"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={10}
      cy={10}
      fill="white"
      r={10}
    />
    <circle
      cx={10}
      cy={10}
      r={9.5}
      stroke="white"
    />
    <circle
      cx={10}
      cy={10}
      fill="#C1CCD0"
      r={5}
    />
  </svg>
</div>
`;

exports[`Radio renders unchecked correctly 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 18px;
  height: 18px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: absolute;
  opacity: 0;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 8px;
  border-radius: circle;
  color: gray;
  width: 16px;
  height: 16px;
}

input:checked ~ .c0 {
  color: primary;
}

input:focus ~ .c0 {
  box-shadow: active;
}

.c5 {
  display: none;
}

input:checked:not(:disabled) ~ .c4 {
  display: block;
}

.c8 {
  display: none;
}

input:not(:checked):not(:disabled) ~ .c7 {
  display: block;
}

.c10 {
  display: none;
}

input:disabled:not(:checked) ~ .c9 {
  display: block;
}

<div
  className="c0 c1"
>
  <input
    className="c0 c2"
    defaultChecked={false}
    type="radio"
  />
  <svg
    aria-hidden="true"
    className="c0 c3 c4 c5 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="#6A88F2"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#6A88F2"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c7 c8 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="#D4DBDE"
    />
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={4}
    />
  </svg>
  <svg
    aria-hidden="true"
    className="c0 c3 c9 c10 c0 c6"
    fill="none"
    height={16}
    viewBox="0 0 16 16"
    width={16}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx={8}
      cy={8}
      fill="white"
      r={8}
    />
    <circle
      cx={8}
      cy={8}
      r={7.5}
      stroke="white"
    />
    <circle
      cx={8}
      cy={8}
      fill="#C1CCD0"
      r={4}
    />
  </svg>
</div>
`;
